--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://saurabh56:Saurabh56%40@clustersaurabh.0ctgaid.mongodb.net/Mern-app?retryWrites=true&w=majority
+
+JWT_TOKEN=saurabhgauravsachin42
